--- a/.ideavimrc
+++ b/.ideavimrc
@@ -70,15 +70,15 @@ nnoremap J 5j
 nnoremap K 5k
 vmap J 5j
 vmap K 5k
-"nmap H 5h
-"nmap L 5l
-"vmap H 5h
-"vmap L 5l
+nmap H 5h
+nmap L 5l
+vmap H 5h
+vmap L 5l
 nmap Y y$
 
 " Tab
-nmap L <Action>(NextTab)
-nmap H <Action>(PreviousTab)
+"nmap L <Action>(NextTab)
+"nmap H <Action>(PreviousTab)
 
 " Splits
 nmap <leader>\ :vsp<CR>
@@ -122,7 +122,6 @@ vmap <C-a>j :action ActivatePythonConsoleToolWindow<CR>
 vmap <C-a>d :action ActivateDebugToolWindow<CR>
 vmap <C-a>t :action ActivateTerminalToolWindow<CR>
 nmap <leader><Enter> <Action>(ShowIntentionActions)
-nmap <leader>rf :action ReformatCode<CR><Action>(OptimizeImports)
 nmap <leader><leader> <action>(ReformatCode)
 nmap <leader>rb <Action>(Tool_External Tools_black)
 nmap <leader>ri <Action>(OptimizeImports)
